new beer description

--- a/index.html
+++ b/index.html
@@ -37,13 +37,18 @@
       <div class="beers-list">
         <ul></ul>
       </div>
-
-
-      <footer class="footer">
-          <p>hecho con&nbsp;&nbsp;<i class="fa fa-heart red" aria-hidden="true"></i>&nbsp;&nbsp;por <a href="mailto:ricardo.martinez.monje@gmail.com">Ricardo Martínez</a></p>
-      </footer>
     </section>
   </div>
+
+  <div class="overlay">
+    <a href="javascript:void(0)" class="closebtn">&times;</a>
+    <div class="overlay-content">
+    </div>
+  </div>
+
+  <footer class="footer">
+    <p>hecho con&nbsp;&nbsp;<i class="fa fa-heart red" aria-hidden="true"></i>&nbsp;&nbsp;por <a href="mailto:ricardo.martinez.monje@gmail.com">Ricardo Martínez</a></p>
+  </footer>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
